Fixed Spacing for Hero

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@
 /* Hero Section */
 .hero {
     background: #f9d66c;
-    padding: 200px 0;
+    padding: 0px 0px;
 }
 
 .hero__container {
